<resources>
    <string name="app_name">EvArkadasim</string>
    <string name="nameSurname">İsim Soyisim</string>
    <string name="password">Şifre</string>
    <string name="email">Email</string>
    <string name="forgetPassword">Parola Unuttum</string>
    <string name="passwordReset">Şifre Değiştir</string>
    <string name="status">Durum</string>
    <string name="timeType">Gün</string>
    <string name="time">Kaç gün kalacaksın?</string>
    <string name="length">Okula uzaklığı</string>
    <string name="lengthType">Mesafe Türü</string>
    <string name="department">Bölüm</string>
    <string name="phoneNumber">Telefon No</string>
    <string name="login">Login</string>
    <string name="oldPassword">Eski Şifre</string>
    <string name="newPassword">Yeni Şifre</string>
    <string name="newAgainPassword">Şifreyi Tekrar Girin</string>
    <string name="signup">Kayıt Ol</string>
    <string name="signIn">Giriş Yap</string>
    <string name="signInTitle">GİRİŞ YAP</string>
    <string name="save">Kaydet</string>
    <string name="userAbout">Kullanıcı Bilgileri</string>
    <string name="edit">Düzenle</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>,


</resources>

